big change: mv stock_option to LTS, use latest LTS library and refine the LTS wrapper code. The LTS is used in OnesideDolphin;

--- a/LTS/Makefile
+++ b/LTS/Makefile
@@ -10,4 +10,4 @@ wrap: *.cpp *.h *.swig
 	g++ -shared trader_wrap.o trader.o -o _trader.so -lsecuritytraderapi -L./api
 
 clean:
-	rm *.o *.so *.cxx *.pyc datafeeder.py trader.py
+	rm *.o *.so *.cxx datafeeder.py trader.py
